<resources>
    <string name="app_name">Snuber</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="onboardingProcess">
        <item>Request a ride from SNAP.</item>
        <item>See your estimated wait time.</item>
        <item>Receive notifications from SNAP.</item>
    </string-array>

    <string-array name="onboardDescription">
        <item>Choose your destination, and SNAP will be there soon.</item>
        <item>Have an idea of when SNAP will arrive, so you can plan ahead.</item>
        <item>No more listening for the honk or looking for flashing yellow lights. Receive a notification and be on your way. </item>
    </string-array>

    <string name="userChoose">What type of user are you</string>
    <string name="driver">Driver</string>
    <string name="student">Student</string>

    <string name="nameQuestion">What is your name?</string>
    <string name="name">Name</string>
    <string name="next">Next</string>

    <string name="userImageQuestion">Choose your profile picture…</string>
    <string name="chooseImage">Choose Profile Image</string>

    <string name="gallery">Gallery</string>
    <string name="takePicture">Take Picture</string>
    
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Password Confirmation</string>

    <string name="signup">Signup</string>
    <string name="signupRegular">Signup</string>
    <string name="login">Log In</string>
    <string name="loginRegular">Log In</string>
</resources>
