<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:id="@+id/fragment_userchoose"
    android:layout_gravity="center">

    <ImageView android:src="@drawable/transparent_text_effect"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <!-- Ask user if driver or student -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userChoose_textView"
        android:text="@string/userChoose"
        android:gravity="center"
        android:textSize="20sp"/>

    <!-- Password Label -->

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_student"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/student"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_driver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/driver"/>
</LinearLayout>