<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_driverinfo">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="274dp">

        <ImageView
            android:id="@+id/section_img_driver"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:alpha="0.30"
            android:background="@drawable/ic_time_to_leave_black_24px"
            android:scaleType="fitCenter"
            android:layout_marginTop="60dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driverName_textView"
            android:text="@string/nameQuestion"
            android:gravity="center"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/driverName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_driver_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/next"/>

    </LinearLayout>

</LinearLayout>